--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tiny-editor",
-  "version": "0.0.0",
+  "name": "angular-tiny-editor",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
